@@ -1,5 +1,8 @@
 2006-11-30  Brian Bidulock  <bidulock@openss7.org>
 
+	* tests/atlocal.in: cosmetic changes
+	* tests/kernel.at: cosmetic changes
+
 	* doc/man/man5/sigtran.conf.5.man: documentation start
 	* doc/manual/fig1.fig: documentation start
 	* doc/manual/fig2.fig: documentation start
